Register form and css fix for header of container when image is not found (too much height)

--- a/css/default.css
+++ b/css/default.css
@@ -19,7 +19,7 @@ a{
 
 a:hover{
 	transition: 500ms linear 0s;
-	text-shadow: -1px 1px 8px #349bd1;
+	text-shadow: -1px 1px 8px;
 }
 
 .center{
@@ -154,6 +154,7 @@ a:hover{
 	box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.7);
 	display:block;
 	width:100%;
+	max-height:150px;
 }
 
 .container .content {
